Fixed a text overflowing issue

--- a/issues/static/css/base.css
+++ b/issues/static/css/base.css
@@ -126,7 +126,8 @@ input, textarea, select, button{
 
 .issue_creator
 {
-    width: 25%
+    width: 25%;
+    min-width: 200px;
 }
 
 .issue_approved_by
